# OpenSoundBoard

./: .gitignore  AudioPlayerManagers.cpp  AudioPlayerManagers.hpp  AudioPlayers.cpp  AudioPlayers.hpp  AudioTrack.cpp  AudioTrack.hpp  AudioTrackContext.cpp  AudioTrackContext.hpp  CMakeLists.txt  DeviceTab.cpp  DeviceTab.hpp  MainWindow.cpp  MainWindow.hpp  README.md  WidgetMessages.cpp  WidgetMessages.hpp  embedder.cpp  main.cpp
resources/: style.qss
src/: AudioPlayerManagers.cpp  AudioPlayerManagers.hpp  AudioPlayers.cpp  AudioPlayers.hpp  AudioSink.cpp  AudioSink.hpp  AudioSource.cpp  AudioSource.hpp  AudioTrack.cpp  AudioTrack.hpp  AudioTrackContext.cpp  AudioTrackContext.hpp  DeviceTab.cpp  DeviceTab.hpp  MainWindow.cpp  MainWindow.hpp  WidgetMessages.cpp  WidgetMessages.hpp  main.cpp
src/AudioPlayerManagers/: AudioPlayerManager.cpp  AudioPlayerManager.hpp  MediaFilesPlayerManager.cpp  MediaFilesPlayerManager.hpp  MicrophonePlayerManager.cpp  MicrophonePlayerManager.hpp
src/AudioPlayerWidgets/: AudioPlayerWidget.cpp  AudioPlayerWidget.hpp  MediaFilesPlayerWidget.cpp  MediaFilesPlayerWidget.hpp  MicrophonePlayerWidget.cpp  MicrophonePlayerWidget.hpp
src/AudioPlayers/: AudioPlayer.cpp  AudioPlayer.hpp  AudioTrackContext.cpp  AudioTrackContext.hpp  AudioTrackReader.cpp  MediaFilesPlayer.cpp  MediaFilesPlayer.hpp  MicrophonePlayer.cpp  MicrophonePlayer.hpp
src/FFMPEG/: AudioTrackReader.cpp
src/SDL/: DeviceStream.cpp  DevicesList.cpp
src/WidgetMessageBoxing/: WidgetWarning.cpp
